--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@tailwind base;
+/* @tailwind base; */
 @tailwind components;
 @tailwind utilities;
 @layer utilities {
@@ -7,4 +7,8 @@
     -webkit-appearance: none;
     margin: 0;
   }
+}
+
+button{
+  background: none;
 }
