feat: on NOTIFY button restrict to the type Information type

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,3 +12,9 @@
 button {
   background: none;
 }
+
+.alerttype {
+  text-align: center;
+  background-color: lightgrey;
+  pointer-events: none;
+}
