--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,3 +18,17 @@ button {
   background-color: lightgrey;
   pointer-events: none;
 }
+.identifies-users {
+  margin: 0%;
+  padding: 0%;
+}
+.identifies-users > li {
+  list-style-type: none;
+  /* width: 25%; */
+  display: inline-block;
+  margin-bottom: 10px;
+  margin: 10px;
+  text-decoration: underline;
+  text-decoration-color: blue;
+  cursor: pointer;
+}
